--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assessment",
+  "name": "reacttask",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.21.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts  start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
